data/derived/comb/progs/unify/prog8889.ml.out
Characters 175-204:
  | Sine e'                -> Printf.sprintf("sin(%s)", exprToString(e'))
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type
         ('c, unit, string) format =
           ('c, unit, string, string, string, string)
           CamlinternalFormatBasics.format6
